syntax = "proto3";

package contact;

service ContactService {
    rpc Insert (InsertRequest) returns (InsertResponse);
    rpc Read (ReadRequest) returns (ReadResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Search (SearchRequest) returns (SearchResponse);
}

message Contact {
    string phoneNumber = 1;
    string name = 2;
    string address = 3;
}

message InsertRequest {
    Contact contact = 1;
}

message InsertResponse {
    string id = 1;
    Contact contact = 2;
}

message ReadRequest {
    string phoneNumber = 1;
}

message ReadResponse {
    Contact contact = 1;
}

message UpdateRequest {
    string phoneNumber = 1;
    optional string update_phone_number = 2;
    optional string update_name = 3;
    optional string update_address = 4;
}

message UpdateResponse {
    Contact contact = 1;
}

message DeleteRequest {
    string phoneNumber = 1;
}

message DeleteResponse {
    Contact contact = 1;
}

message SearchRequest {
    string searchName = 1;
}

message SearchResponse {
    repeated Contact results = 1;
}